@@ -1,3 +1,7 @@
+2010-03-12  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
+
+	* include/dlvhex/MLPSolver.hpp: Fixed output formatting, minus eliminating prefix.
+
 2010-03-11  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
 	
 	* testsuite/TestMLPSolver.cpp: Adding more examples about disjunctive and naf
